# esp32s3_lcd_i80_template

./: .gitignore  README copy.md  README.md  README_src.md  partitions.csv  sdkconfig  sdkconfig.defaults.esp32s3  sdkconfig.old
components/lvgl_exp_ui/: CMakeLists.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
components/lvgl_exp_ui/components/: ui_comp_hook.c
components/lvgl_exp_ui/screens/: ui_Screen1.c
components/lvgl_thread/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  lvgl_thread.c  lvgl_thread.h
main/: CMakeLists.txt  i80_controller_example_main.c  i80_controller_example_main.h  lvgl_demo_ui.c  main.c
